--- a/web/sj-chemical/demo/css/sj-2.css
+++ b/web/sj-chemical/demo/css/sj-2.css
@@ -1,490 +1,1 @@
-
-
-li.language {
-    text-align: center;
-    transition: all 0.4s;
-}
-li.language span {
-    transition: all 0.4s;
-}
-
-
-/* 大  大  大  大  大  大  大  大  大  大  大  大  大 尺寸时                                          */
-/* 大  大  大  大  大  大  大  大  大  大  大  大  大 尺寸时                                          */
-@media(min-width:768px) {
-/*调整顶部 nav 的位置及厚度等*/
-    header#header-main {
-        height: 60px;
-        top: 230px;
-    }
-    header#header-main div.header-innerwrapper {
-        height: 60px;
-    }
-/*    设置 back 按钮的样式*/
-    li.back a {
-        display: block;
-        width: 30px!important;
-        height: 30px;
-        background: transparent url(../images/arrow-left-big.png);
-        background-size: 30px 30px;
-        transition: all 0.4s;
-    }
-    li.back a:hover {
-        background-color: transparent!important;
-        background-image: url(../images/arrow-left-big-hover.png)!important;
-        background-size: 30px 30px;
-    }
-/*    设置导航栏选项的样式“公司概况”等*/
-/*    恢复当前选中页面导航栏的白底*/
-    li.item-on {
-        background-color: #fff;
-    }
-    li.item-on a {
-        color: #7c7c7c!important;
-    }
-/*    设置导航栏字体样式*/
-    header#header-2 div.header-innerwrapper {
-        background-color: transparent;
-    }
-    div.stageimage {
-        margin-top: 80px!important;
-        height: 320px;
-    }
-        /*    设置 logo 图标*/
-    div.logo-wrapper a {
-        width: 150px;
-        height: 150px;
-        background: url(../images/logo.png) 50% 50% no-repeat;
-/*        background-color: transparent!important;*/
-/*        background-color: rgba(0,0,0,0);*/
-        background-size: 150px 150px;
-    }
-    /*设置“双驹 合作共赢”的宽度*/
-    .stageheadline {
-        width: 550px !important;
-        margin: 100px auto 0 auto;
-    }
-    
-/*    是 nav 里面的 公司、产品、联系我们宽度一致并居左*/
-    nav.wcms-navigation-main {
-        padding: 0;
-    }
-    div.navigationmain {
-        float: left;
-    }
-    div.main-menu > ul > li {
-        width: 100px;
-        text-align: center
-    }
-    div.main-menu > ul > li > a {
-        width: 100px;
-    }
-    /*    设置下拉菜单的位置和尺寸*/
-    ul#nav-down-company {
-        width: 150px;
-        left: 32%;
-        padding: 0;
-        padding: 0 0 10px 0;
-    }
-    ul#nav-down-products {
-        width: 180px;
-        left: 40%;
-        padding: 0 0 10px 0;
-    }
-    .col-lg-4 {
-        width: 180px;
-        padding: 0!important;
-        margin: 0!important;
-    }
-    .col-lg-4 ul {
-        width: 180px;
-        padding: 0!important;
-        margin: 0!important;
-    }
-    ul#nav-down-products  li.has-submenu {
-        width: 110px;
-        float: none;
-        text-align: center;
-/*        这个margin 是为了 col-lg-4 设置的*/
-        margin: 0 auto;
-    }
-    ul#nav-down-company  li.has-submenu {
-        width: 110px;
-        float: none;
-        text-align: center;
-/*        这个margin 是为了 col-lg-4 设置的*/
-        margin: 0 auto;
-        padding-bottom: 10px;
-    }
-/*    设置大尺寸时语言栏的样式*/
-    li.language {
-        width: 80px;
-        text-align: center;
-        transition: all 0.4s;
-    }
-    li.language span {
-        transition: all 0.4s;
-        color: #7c7c7c;
-    }
-
-    li.language-on {
-        background: #fff;
-    }
-    li.language-on span {
-        color: #003167;
-    }
-/*    设置语言栏 hover 时的样式*/
-    li.language:hover {
-        background: #fff;
-    }
-    li.language a:hover span {
-        color: #003167;
-    }
-/*    增大中间 div 的高度*/
-    div.main {
-        height: 500px;
-    }
-    div.main > div {
-        height: 500px;
-    }
-/*    调整内文文字的尺寸和字体大小*/
-    div.main .wcms-text-content {
-        width: 600px;
-        margin: 0 auto;
-    }
-    div.main p {
-        font-size: 20px;
-    }
-/*    使得欢迎标题居中*/
-    div.main div.title {
-        width: 800px;
-        margin: 0 auto;
-    }
-    div.main h1 {
-        width: 700px;
-        margin: 0 auto 50px auto;
-    }
-    /*    以下设置底部社交网络icon的样式*/
-    div.scroll-container {
-        width: 280px;
-        margin: 10px auto!important;
-    }
-    div.social-scroll {
-        width: 280px;
-    }
-    ul.item-wrapper-scroll {
-        width: 280px!important;
-    }
-    li.item-scroll {
-        display: inline-block!important;
-        width: 70px!important;
-        height: 40px;
-        text-align: center;
-    }
-/*    取消 padding*/
-    li.item-scroll a {
-        margin: 0 10px!important;
-        padding: 0;
-    }
-/*    hover*/
-    li.item-scroll img:hover {
-        background: #333333;
-    }
-    li.item-scroll img {
-        width: 40px;
-        background: #fff;
-    }
-    div.social-navigation {
-        height: 60px;
-    }
-/*    设置"公司概况"内文文字样式*/
-    div.wcms-text-content p {
-        margin-bottom: 15px;
-    }
-    div.wcms-text-content p span {
-        font-size: 13px;
-    }
-/*    设置大尺寸时形象展示、荣誉证书等页面的简介文字*/
-    div.text-profile p {
-        width: 800px;
-        margin: 0 auto;
-        color: #7c7c7c;
-        line-height: 1.875rem;
-        font-size: 13px;
-    }
-/*    设置内文图片的尺寸和位置*/
-    div.linkteaser {
-/*        width: 709px;*/
-    }
-    div.linkteaser img {
-        width: 250px;
-    }
-/*    设置配图文字大小*/
-    div.linkteaser p {
-        font-size: 12px;
-        text-align: center;
-        margin-bottom: 10px;
-    }
-}
-/* 大  大  大  大  大  大  大  大  大  大  大  大  大 尺寸时                                          */
-/* 大  大  大  大  大  大  大  大  大  大  大  大  大 尺寸时                                          */
-
-
-
-/*  小  小  小  小  小  小  小  小  小  小  小  小  小  小 尺寸时                                          */
-/*  小  小  小  小  小  小  小  小  小  小  小  小  小  小 尺寸时                                          */
-@media(max-width:768px) {
-/*    让下拉菜单的 “公司”“产品”“联系我们”文字内容居中*/
-    .main-menu ul li a {
-        text-align: center;
-    }
-/*    设置返回按钮在小尺寸时float-left*/
-    li.back {
-        width: 50px;
-        height: 35px;
-    }
-    /*    设置 back 按钮的样式*/
-    li.back a {
-        border-top: 0!important;
-    }
-    /*    设置 back 按钮的样式*/
-    li.back a {
-        display: block;
-        width: 30px!important;
-        height: 30px;
-        background: transparent url(../images/arrow-left-small.png);
-        background-size: 30px 30px;
-        transition: all 0.4s;
-    }
-    li.back a:hover {
-        background: transparent url(../images/arrow-left-small-hover.png);
-        background-size: 30px 30px;
-    }
-/*    设置小尺寸时下拉菜单 “公司” 两字居中*/
-    li.overview {
-        text-align: center;
-    }
-/*    设置小尺寸时下拉菜单的字体样式*/
-    li.item-1 a, li.item-2 a, li.item-3 a, li.item-4 a {
-        color: #7c7c7c;
-        transition: all 0.4s;
-    }
-    li.item-1 a:hover, li.item-2 a:hover, li.item-3 a:hover, li.item-4 a:hover {
-        color: #003167;
-    }
-    li.item-on a {
-        color: #003167;
-    }
-/*    取消下拉菜单 公司概况等字样的 padding*/
-    .main-menu li a {
-        padding-right: 0!important;
-    }
-        /*    设置 logo 图标*/
-    div.logo-wrapper {
-        height: 80px;
-        margin: 0 auto;
-        text-align: center;
-    }
-    div.logo-wrapper a {
-        display: block;
-        margin: 20px 0 0 0;
-        width: 60px;
-        height: 50px;
-        background: #003167 url(../images/logo-2.png) 50% 50% no-repeat;
-        background-size: 60px 60px;
-    }
-    
-/*    设置顶部 nav-language */
-    div.navigation-wrapper-language {
-        height: 35px!important;
-    }
-    nav.nav-language {
-        height: 35px!important;
-    }
-    nav.nav-language {
-        background: #003167;
-    }
-    nav.nav-language ul {
-        float: right;
-    }
-    nav.nav-language ul li.language { 
-        width: 55px;
-    }
-    nav.nav-language ul li.language a {
-        display: block;
-        line-height: 35px;
-        height: 35px;
-        padding: 0;
-        font-size: 12px;
-    }
-    li.language span {
-        display: block;
-    }
-    li.language span {
-        transition: all 0.4s;
-        color: #7c7c7c;
-    }
-    li.language-on span {
-        color: #fff;
-    }
-/*    设置语言栏 hover 时的样式*/
-    li.language:hover {
-        background: #fff;
-    }
-    li.language-on span:hover {
-        color: #7c7c7c;
-    }
-/*    设置汉堡包图标的底色*/
-    a.open-menu-butn {
-        padding: 0px!important;
-    }
-    a.open-menu-butn img {
-        width: 85px!important;
-        background: #7c7c7c;
-        transition: all 0.4s;
-    }
-    a.open-menu-butn img:hover {
-        background: #003167;
-    }
-    /*    以下设置底部社交网络icon的样式*/
-    div.scroll-container {
-        width: 240px;
-        margin: 10px auto!important;
-    }
-    div.social-scroll {
-        width: 240px;
-    }
-    ul.item-wrapper-scroll {
-        width: 240px!important;
-    }
-    li.item-scroll {
-        display: inline-block!important;
-        width: 60px!important;
-        text-align: center;
-    }
-/*    取消 padding*/
-    li.item-scroll a {
-        margin: 0 10px!important;
-        padding: 0;
-    }
-/*    hover*/
-    li.item-scroll img:hover {
-        background: #333333;
-    }
-    li.item-scroll img {
-        width: 30px;
-        background: #fff;
-    }
-    div.social-navigation {
-        height: 50px;
-    }
-    /*    设置公司概况内文文字样式*/
-    div.wcms-text-content p {
-        margin-bottom: 15px;
-    }
-    div.wcms-text-content p span {
-        font-size: 12px;
-    }
-/*    设置形象展示、荣誉证书等页面的简介文字*/
-    div.text-profile p {
-        color: #7c7c7c;
-        font-size: 12px;
-        line-height: 1.625rem;
-    }
-/*    设置内文图片的尺寸和位置*/
-    div.linkteaser {
-/*        width: 709px;*/
-    }
-    div.linkteaser a {
-        padding: 10px 0;
-    }
-    div.linkteaser img {
-        width: 250px;
-        display: block;
-        margin: 0 auto;
-    }
-    /*    设置配图文字大小*/
-    div.linkteaser p {
-        font-size: 12px;
-        text-align: center;
-        margin-bottom: 10px;
-        padding: 10px 0;
-    }
-}
-/*  小  小  小  小  小  小  小  小  小  小  小  小  小  小 尺寸时                                          */
-/*  小  小  小  小  小  小  小  小  小  小  小  小  小  小 尺寸时                                          */
-
-
-
-/*设置汉堡包菜单图标 */
-img#icon-menu-group {
-    width: 25px;
-}
-
-/*设置 footer 样式*/
-div.legal-footer {
-    background: #022953;
-}
-div.legal-footer ul li {
-    float: none;
-    width: 270px;
-    margin: 0 auto!important;
-    color: #8e8e8e!important;
-}
-
-/*设置底部 social icon 条的底色*/
-div.social-navigation {
-    background: #d7d7d7;
-    border: 0;
-}
-/*设置社交网络icon的hover颜色*/
-img#weibo, img#linkedin, img#twitter, img#facebook {
-    transition: all 0.4s;
-}
-img#weibo:hover {
-    background-color: #f70b19;
-}
-img#linkedin:hover {
-    background-color: #007bb6;
-}
-img#twitter:hover {
-    background-color: #50abf1;
-}
-img#facebook:hover {
-    background-color: #3b5998;
-}
-
-/*设置 linkteaser 前面的标志*/
-span.linkteaser-span {
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    background: #003167;
-    margin-right: 5px;
-}
-
-.wcms-darkblue-theme .theme-border {
-    border-color: #003196;
-}
-
-/*设置内页图片的尺寸，大小浏览器尺寸通用*/
-div.div-inner div {
-/*    background: rgba(0,50,103,0.1);*/
-    background: rgba(200,200,200,0.2)
-}
-div.div-inner a {
-    display: block;
-    width: 200px;
-    height: 190px;
-    margin: 10px auto;
-}
-div.linkteaser img.img-inner {
-    width: 200px;
-    margin: 0 auto!imortant;
-    vertical-align: bottom!important;
-}
-
-/*恢复底部灰边*/
-footer.footer div.row {
-    margin-top: 50px;
-}
+img#facebook,img#linkedin,img#twitter,img#weibo,li.language,li.language span{transition:all .4s}li.language{text-align:center}@media(min-width:768px){header#header-main{height:60px;top:230px}header#header-main div.header-innerwrapper{height:60px}li.back a{display:block;width:30px!important;height:30px;background:url(../images/arrow-left-big.png);background-size:30px 30px;transition:all .4s}li.back a:hover{background-color:transparent!important;background-image:url(../images/arrow-left-big-hover.png)!important;background-size:30px 30px}li.item-on{background-color:#fff}li.item-on a{color:#7c7c7c!important}header#header-2 div.header-innerwrapper{background-color:transparent}div.stageimage{margin-top:80px!important;height:320px}div.logo-wrapper a{width:150px;height:150px;background:url(../images/logo.png) 50% 50% no-repeat;background-size:150px 150px}li.language-on,li.language:hover{background:#fff}.stageheadline{width:550px!important;margin:100px auto 0}nav.wcms-navigation-main{padding:0}div.navigationmain{float:left}div.main-menu>ul>li{width:100px;text-align:center}div.main-menu>ul>li>a{width:100px}ul#nav-down-company{width:150px;left:32%;padding:0 0 10px}ul#nav-down-products{width:180px;left:40%;padding:0 0 10px}.col-lg-4,.col-lg-4 ul{width:180px;padding:0!important;margin:0!important}ul#nav-down-company li.has-submenu,ul#nav-down-products li.has-submenu{text-align:center;margin:0 auto;width:110px;float:none}ul#nav-down-company li.has-submenu{padding-bottom:10px}li.language{width:80px;text-align:center;transition:all .4s}li.language span{transition:all .4s;color:#7c7c7c}li.language a:hover span,li.language-on span{color:#003167}div.main,div.main>div{height:500px}div.main .wcms-text-content{width:600px;margin:0 auto}div.main p{font-size:20px}div.main div.title{width:800px;margin:0 auto}div.main h1{width:700px;margin:0 auto 50px}div.scroll-container{width:280px;margin:10px auto!important}div.social-scroll{width:280px}ul.item-wrapper-scroll{width:280px!important}li.item-scroll{display:inline-block!important;width:70px!important;height:40px;text-align:center}li.item-scroll a{margin:0 10px!important;padding:0}li.item-scroll img:hover{background:#333}li.item-scroll img{width:40px;background:#fff}div.social-navigation{height:60px}div.wcms-text-content p{margin-bottom:15px}div.wcms-text-content p span{font-size:13px}div.text-profile p{width:800px;margin:0 auto;color:#7c7c7c;line-height:1.875rem;font-size:13px}div.linkteaser img{width:250px}div.linkteaser p{font-size:12px;text-align:center;margin-bottom:10px}}@media(max-width:768px){.main-menu ul li a,div.linkteaser p,div.logo-wrapper,li.item-scroll,li.overview{text-align:center}li.back{width:50px;height:35px}li.back a{border-top:0!important;display:block;width:30px!important;height:30px;background:url(../images/arrow-left-small.png);background-size:30px 30px;transition:all .4s}li.back a:hover{background:url(../images/arrow-left-small-hover.png);background-size:30px 30px}li.item-1 a,li.item-2 a,li.item-3 a,li.item-4 a{color:#7c7c7c;transition:all .4s}li.item-1 a:hover,li.item-2 a:hover,li.item-3 a:hover,li.item-4 a:hover,li.item-on a{color:#003167}.main-menu li a{padding-right:0!important}div.logo-wrapper{height:80px;margin:0 auto}div.logo-wrapper a{display:block;margin:20px 0 0;width:60px;height:50px;background:url(../images/logo-2.png) 50% 50% no-repeat #003167;background-size:60px 60px}div.navigation-wrapper-language,nav.nav-language{height:35px!important}nav.nav-language{background:#003167}nav.nav-language ul{float:right}nav.nav-language ul li.language{width:55px}nav.nav-language ul li.language a{display:block;line-height:35px;height:35px;padding:0;font-size:12px}li.language span{display:block;transition:all .4s;color:#7c7c7c}li.language-on span{color:#fff}li.language:hover{background:#fff}li.language-on span:hover{color:#7c7c7c}a.open-menu-butn{padding:0!important}a.open-menu-butn img{width:85px!important;background:#7c7c7c;transition:all .4s}a.open-menu-butn img:hover{background:#003167}div.scroll-container{width:240px;margin:10px auto!important}div.social-scroll{width:240px}ul.item-wrapper-scroll{width:240px!important}li.item-scroll{display:inline-block!important;width:60px!important}li.item-scroll a{margin:0 10px!important;padding:0}li.item-scroll img:hover{background:#333}li.item-scroll img{width:30px;background:#fff}div.social-navigation{height:50px}div.wcms-text-content p{margin-bottom:15px}div.wcms-text-content p span{font-size:12px}div.text-profile p{color:#7c7c7c;font-size:12px;line-height:1.625rem}div.linkteaser a{padding:10px 0}div.linkteaser img{width:250px;display:block;margin:0 auto}div.linkteaser p{font-size:12px;margin-bottom:10px;padding:10px 0}}img#icon-menu-group{width:25px}div.legal-footer{background:#022953}div.legal-footer ul li{float:none;width:270px;margin:0 auto!important;color:#8e8e8e!important}div.social-navigation{background:#d7d7d7;border:0}img#weibo:hover{background-color:#f70b19}img#linkedin:hover{background-color:#007bb6}img#twitter:hover{background-color:#50abf1}img#facebook:hover{background-color:#3b5998}span.linkteaser-span{display:inline-block;width:10px;height:10px;background:#003167;margin-right:5px}.wcms-darkblue-theme .theme-border{border-color:#003196}div.div-inner div{background:rgba(200,200,200,.2)}div.div-inner a{display:block;width:200px;height:190px;margin:10px auto}div.linkteaser img.img-inner{width:200px;margin:0 auto!imortant;vertical-align:bottom!important}footer.footer div.row{margin-top:50px}
